Bug 47752 - UI: particular checkboxes truncated
Summary: UI: particular checkboxes truncated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.5.2 RC1
Hardware: Other Linux (All)
: medium minor
Assignee: Ivan Timofeev (retired)
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-23 02:12 UTC by dE
Modified: 2012-05-30 11:35 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Checkbox rendering buggy. (36.50 KB, image/png)
2012-04-21 08:43 UTC, dE
Details
Checkbox rendering buggy. (42.93 KB, image/png)
2012-04-21 08:44 UTC, dE
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dE 2012-03-23 02:12:55 UTC

    
Comment 1 dE 2012-03-23 02:18:10 UTC
Currently, the checkboxes in table form (seen in Tools > options > load/save > Microsoft office, language settings > writing aid) are broken.

Other components include; in Writer, right click on text > font and size; the radio buttons are broken.
Comment 2 Andras Timar 2012-04-15 06:14:32 UTC
Can you attach a screenshot maybe? It is not reproducible on my system (openSUSE 12.1, GNOME 3).
Comment 3 dE 2012-04-15 06:36:40 UTC
Oh, go, I forgot to mention again -- it's on the KDE/QT build.
Comment 4 Rainer Bielefeld Retired 2012-04-19 22:47:54 UTC
@dE:
"are broken" means what? Look ugly? Do not work at all? 2 Radio buttons for same option active? Click does not add the checkmark? No difference whether checked or not? Please use clear and non-ambiguous descriptions -  and please attach the requested screenshot.

'Tools > options > load/save > Microsoft office'

In my LibO 3.4.4 on Ubuntu 11 64bit (Virtualbox) the checkboxes in 
'Tools -> options -> load/save -> Microsoft office'  and 
'Tools -> options -> language settings -> writing aids'
The checkboxes look ugly, some of them are shown without right border of the checkbox (for example writing aids - Hunspell SpellChecker), for some of them additionally the bottom border is missing (for example  writing aids - openoffice.org New Thesaurus). In the second example additionally the bottoms of the "p" and "g" in "openoffice.org" are truncated.

Might be Linux only (and may be related to other circumstances), I do not see the truncations with  "LibreOffice 3.5.2.2 German UI/Locale [Build-ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f] on German WIN7 Home Premium (64bit)
Comment 5 Petr Mladek 2012-04-20 00:55:58 UTC
screenshot usually best describes these type of problems. If is only a few pixel problem, it is good to create red circle around the problematic location. You might use gimp to create the circle.
Comment 6 dE 2012-04-20 01:52:45 UTC
(In reply to comment #4)
> @dE:
> "are broken" means what? Look ugly? Do not work at all? 2 Radio buttons for
> same option active? Click does not add the checkmark? No difference whether
> checked or not? Please use clear and non-ambiguous descriptions -  and please
> attach the requested screenshot.
> 
> 'Tools > options > load/save > Microsoft office'
> 
> In my LibO 3.4.4 on Ubuntu 11 64bit (Virtualbox) the checkboxes in 
> 'Tools -> options -> load/save -> Microsoft office'  and 
> 'Tools -> options -> language settings -> writing aids'
> The checkboxes look ugly, some of them are shown without right border of the
> checkbox (for example writing aids - Hunspell SpellChecker), for some of them
> additionally the bottom border is missing (for example  writing aids -
> openoffice.org New Thesaurus). In the second example additionally the bottoms
> of the "p" and "g" in "openoffice.org" are truncated.
> 

Yes, exactly those. Since I know this bug persists in all distros (I tried that), I though the devs could see it themselves.

> Might be Linux only (and may be related to other circumstances), I do not see
> the truncations with  "LibreOffice 3.5.2.2 German UI/Locale [Build-ID:
> 281b639-6baa1d3-ef66a77-d866f25-f36d45f] on German WIN7 Home Premium (64bit)

LO builds with QT on Windows?
Comment 7 Rainer Bielefeld Retired 2012-04-20 02:16:45 UTC
@dE
Can you please add a screenshot? for me that's a pain with VirtualBox Linux.

@Lubos, @Ivan:
Lubos, will you take, or Ivan, can you shoulder this additional one?
Comment 8 dE 2012-04-21 08:43:46 UTC
Created attachment 60425 [details]
Checkbox rendering buggy.
Comment 9 dE 2012-04-21 08:44:47 UTC
Created attachment 60426 [details]
Checkbox rendering buggy.
Comment 10 Ivan Timofeev (retired) 2012-04-24 13:07:27 UTC
In the case of "load/save -> Microsoft office":
svtools/source/contnr/svlbitm.cxx, SvLBoxButton::ImplAdjustBoxSize looks suspiciously - it only adjusts the height... But I can't test this, my kde died inopportunely %-( Maybe I will manage to resurrect it...
Comment 11 Not Assigned 2012-05-30 11:32:51 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=628cec2afa41fa0cedc08bb5084e7b48e0d47918

fdo#47752: use native checkbox width
Comment 12 Not Assigned 2012-05-30 11:33:19 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=61acb9beb2bd5c76df6136d4fb3871db7906a827

fdo#47752: first column of checkboxes is too small