fdo#47752: use native checkbox width

Change-Id: Iac8049c49520a5fd119c4617144af302f924475b